Memperbarui shoesController
