# app/Http/Controllers/API/ShoesController.php
@@ -27,14 +27,110 @@ class ShoesController extends Controller
      *         response=200,
      *         description="successful operation",
      *         @OA\JsonContent()
-     *     )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_page",
+     *         in="query",
+     *         description="current page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=1
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_limit",
+     *         in="query",
+     *         description="max item in a page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=10
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_search",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_publisher",
+     *         in="query",
+     *         description="search by publisher like name",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_sort_by",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="latest"
+     *         )
+     *     ),
+     *
      * )
      */
 
-    public function index()
+    public function index(Request $request)
     {
-        $shoes = Shoes::all();
-        return response()->json(array('message'=>'Data retrieved successfully', 'data'=>$book), 200);
+        try {
+            $data['filter']      = $request->all();
+            $page                = @$data['filter']['_page']  = (@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit               = @$data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset              = ($page?($page-1)*$limit:0);
+            $data['products']    = Shoes::whereRaw('1 = 1');
+
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(title) LIKE "%'.strtolower($request->get('_search')).'%" OR LOWER(author) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+            if($request->get('_publisher')){
+                $data['products'] = $data['products']->whereRaw('LOWER(publisher) = "'.strtolower($request->get('_publisher')).'"');
+            }
+            if($request->get('_sort_by')){
+            switch ($request->get('_sort_by')) {
+                default:
+                case 'latest_publication':
+                    $data['products'] = $data['products']->orderBy('publication_year','DESC');
+                break;
+                case 'latest_added':
+                    $data['products'] = $data['products']->orderBy('created_at','DESC');
+                break;
+                case 'title_asc':
+                    $data['products'] = $data['products']->orderBy('title','ASC');
+                break;
+                case 'title_desc':
+                    $data['products'] = $data['products']->orderBy('title','DESC');
+                break;
+                case 'price_asc':
+                    $data['products'] = $data['products']->orderBy('price','ASC');
+                break;
+                case 'price_desc':
+                    $data['products'] = $data['products']->orderBy('price','DESC');
+                break;
+            }
+            }
+            $data['products_count_total'] = $data['products']->count();
+            $data['products']             = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
+            // $data['products_raw_sql']     = $data['products']->toSql();
+            $data['products']             = $data['products']->get();
+            $data['products_count_start'] = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+            $data['products_count_end']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+           return response()->json($data, 200);
+
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+        }
     }
 
     /**
@@ -75,7 +171,8 @@ class ShoesController extends Controller
     public function store(Request $request)
     {
         try {
-            $validator = Validator::make($request->all(), [
+            $data = $request->json()->all();
+            $validator = Validator::make($data, [
                 'title'  =>  'required|unique:shoes',
                 'author'  =>  'required|max:100',
             ]);
@@ -83,7 +180,9 @@ class ShoesController extends Controller
                 throw new HttpException(400, $validator->message()->first());
             }
             $shoes = new Shoes;
-            $shoes->fill($request->all())->save();
+            $shoes->fill($request->all());
+            $shoes->created_by = \Auth::user()->id; //Store the user ID
+            $shoes->save();
             return response()->json(array('message'=>'Saved successfully', 'data'=>$shoes), 200);
         } catch (\Exception $exception) {
             throw new HttpException(400, "Invalid data - {$exceptiom->getMessage()}");
@@ -191,8 +290,10 @@ class ShoesController extends Controller
         }
 
         try {
-            $shoes->fill($request->all())->save();
-            return response()->json(array('message'=>'Updated successfully', 'data'=>$shoes), 200);
+            $shoes->fill($request->all());
+            $shoes->updated_by = \Auth::user()->id; //Set uder ID on update
+            $shoes->save();
+           return response()->json(array('message'=>'Updated successfully', 'data'=>$shoes), 200);
         } catch (\Exception $exception) {
             throw new HttpException(400, "Invalid data - {$exceptiom->getMessage()}");
         }
@@ -236,6 +337,7 @@ class ShoesController extends Controller
     public function destroy($id)
     {
         $shoes = Shoes::findOrFail($id);
+        $shoes->deleted_by = \Auth::user()->id; // Track who deleted the record
         $shoes->delete();
 
         return response()->json(array('message'=>'Deleted successfully', 'data'=>$shoes), 204);
